refactor: orElseThrow 사용하기